--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "npm run watch:css && next",
     "build": "npm run watch:css && next build",
-    "start": "npm run watch:css && next start",
+    "start": "next start",
     "type-check": "tsc",
     "watch:css": "postcss assets/style/tailwind.css -o assets/style//main.css"
   },
